Updated data path.

--- a/house_price_prediction.ipynb
+++ b/house_price_prediction.ipynb
@@ -142,7 +142,7 @@
       },
       "outputs": [],
       "source": [
-        "# Importar o dataset\n",
+        "# Importar o dataset.\n",
         "houses = pd.read_csv('https://raw.githubusercontent.com/helderpsilva/house_price_prediction/main/data/houses.csv')"
       ]
     },
